# nonebot-nix

./: .gitignore  bot.py  flake.nix  pyproject.toml
nix/: module.nix  package.nix  tools.nix
